--- a/theme/.stylelintrc.json
+++ b/theme/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "stylelint-config-twbs-bootstrap",
   "rules": {
-    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
+    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "selector-max-id": 1
   }
 }
