--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 baseURL: https://thien.dev
 title: Thien Nguyen
-description: Thien Nguyen's personal website
+description: My space on the internet
