--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Generate
-        run: ./giraffe
+        run: |
+          curl -L https://github.com/tatthien/giraffe/releases/download/v0.11.0/giraffe_0.11.0_linux_amd64.tar.gz | tar xvz
+          ./giraffe
 
       - name: Deploy
         uses: nwtgck/actions-netlify@v1.2.3
