--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Generate
         run: |
-          curl -L https://github.com/tatthien/giraffe/releases/download/v0.12.0/giraffe_0.12.0_linux_amd64.tar.gz | tar xvz
+          curl -L https://github.com/tatthien/giraffe/releases/download/v0.13.1/giraffe_Linux_x86_64.tar.gz | tar xvz
           ./giraffe
 
       - name: Deploy
