--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Generate
         run: |
           curl -L https://github.com/tatthien/giraffe/releases/download/v0.13.1/giraffe_Linux_x86_64.tar.gz | tar xvz
+          rm -rf ./dist
           ./giraffe
 
       - name: Deploy on Vercel
