--- a/analytics/packages/functions/package.json
+++ b/analytics/packages/functions/package.json
@@ -7,9 +7,12 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.11.25",
     "@types/aws-lambda": "^8.10.136",
-    "vitest": "^1.3.1",
-    "sst": "^2.40.6"
+    "@types/node": "^20.11.25",
+    "sst": "^2.40.6",
+    "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.8"
   }
 }
