--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-	"devDependencies": {
-		"@types/node": "^20.11.25"
-	},
-	"dependencies": {
-		"@supabase/supabase-js": "^2.39.7",
-		"zod": "^3.22.4"
-	}
+  "scripts": {
+    "postcss": "postcss ./theme/static/css/app.css -o ./theme/static/css/app.css"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@types/node": "^20.11.25",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "zod": "^3.22.4"
+  }
 }
